# haworks-platform

./: .dockerignore  .editorconfig  .gitleaks.toml  CLAUDE.md  Directory.Build.props  Directory.Packages.props  GEMINI.md  HaworksPlatform.sln  Makefile  RitualworksPlatform.sln  build_output.txt  fix.py  fix_guid.py  fix_notif.py  fly.audit.toml  fly.bffweb.toml  fly.catalog.toml  fly.checkout.toml  fly.content.toml  fly.identity.toml  fly.location.toml  fly.merchant.toml  fly.orders.toml  fly.payments.toml  fly.payouts.toml  fly.privacy.toml  fly.scheduler.toml  fly.vault.toml  fly.webhooks.toml  get_context.py
.github/: dependabot.yml  pull_request_template.md
src/Ai/: .gitignore  Dockerfile  README.md  alembic.ini  fly.ai.toml  pyproject.toml
src/Ai/alembic/: env.py
src/Ai/alembic/versions/: 0001_create_ai_schema.py
src/Ai/app/: main.py  settings.py
src/Ai/app/api/: deps.py  health.py
src/Ai/app/api/v1/: __init__.py  chat.py  content.py  recommendations.py  search.py
src/Ai/app/domain/: models.py
src/Ai/app/infrastructure/: catalog_client.py  database.py
src/Ai/app/messaging/: consumer_base.py  masstransit.py
src/Ai/app/messaging/consumers/: order_completed.py  product_invalidated.py
src/Ai/app/services/: catalog_sync_service.py  chat_service.py  content_service.py  embedding_service.py  rag_service.py  recommendation_service.py
src/Ai/app/workers/: catalog_sync_worker.py  rabbitmq_worker.py
src/Ai/tests/: conftest.py
src/Ai/tests/integration/: conftest.py
src/Ai/tests/unit/: test_content_service.py  test_masstransit_envelope.py
(+1594 files in other folders)
