[project]
name = "haworks-ai"
version = "0.1.0"
description = "AI microservice for Haworks Platform — semantic search, chat, recommendations, content generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pgvector>=0.3",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-postgres>=0.0.12",
    "anthropic>=0.40",
    "aio-pika>=9.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx",
    "testcontainers[postgres]>=4.7",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
